Added pie chart to show issues.

--- a/public/index.html
+++ b/public/index.html
@@ -99,7 +99,7 @@
           <div class="item">
                 <div class="container">
                   <div class="carousel-caption">
-                    <h2>Repos.</h2>
+                    <h2>Issues.</h2>
                     <canvas id="reposChart" width="600" height="400"></canvas>
                   </div>
               </div>
