Modified PieChart-> DoughnutChart. Added fond colors for all text.[F

--- a/public/index.html
+++ b/public/index.html
@@ -83,7 +83,7 @@
             <div class="item active">
               <div class="container">
                   <div class="carousel-caption">
-                    <h2>Contributions and their Followers.</h2>
+                    <h2><font color="#006AC1">Contributions</font> and their <font color="#00C13F">Followers.</font></h2>
                     <canvas id="contributorsChart" width="600" height="400"></canvas>      
                   </div>                  
               </div>
@@ -91,7 +91,7 @@
           <div class="item">
                 <div class="container">
                   <div class="carousel-caption">
-                    <h2>Stargazers, Subscribers, Contributors and Forks.</h2>
+                    <h2><font color="#4617B4">Stargazers</font>, <font color="#FF981D">Subscribers</font>, <font color="#FF1D77">Contributors</font> and <font color="#B01E00">Forks.</font></h2>
                     <canvas id="summaryChart" width="600" height="400"></canvas>
                   </div>
               </div>
@@ -107,7 +107,7 @@
           <div class="item">
                 <div class="container">
                   <div class="carousel-caption">
-                    <h2>Activity.</h2>
+                    <h2>Activity: <font color="#006AC1">Added</font>, <font color="#FF2E12">Deleted</font> and <font color="#E1B700">Commited.</font></h2>
                   </div>
                   <canvas id="activityChart" width="1000" height="500"></canvas>
               </div>
