Modified colors and fixed line chart.

--- a/public/index.html
+++ b/public/index.html
@@ -63,7 +63,7 @@
       position: static;
       max-width: 700px;
       padding: 0 150px;
-      margin-top: 100px;
+      margin-top: 60px;
     }
 
     .carousel-caption h1,
@@ -77,13 +77,13 @@
     </style>
   </head>
   <body>
-    <h1 align="center">ChartGit : Chart.js summary using Github API</h1>
+    <h1 align="center">GitChart : Chart.js summary using Github API</h1>
     <div id="myCarousel" class="carousel slide">
       <div class="carousel-inner">
             <div class="item active">
               <div class="container">
                   <div class="carousel-caption">
-                    <h2><font color="#006AC1">Contributions</font> and their <font color="#00C13F">Followers.</font></h2>
+                    <h2><font color="#00C13F">Contributions</font> and their <font color="#006AC1">Followers.</font></h2>
                     <canvas id="contributorsChart" width="600" height="400"></canvas>      
                   </div>                  
               </div>
